# ONE-CLICK-AI-OCD

./: .readthedocs.yaml  pyproject.toml
docs/: advanced.md  api.md  conf.py  examples.md  features.md  getting-started.md  index.rst  installation.md  quick-start.md  troubleshooting.md
