[project]
name = "one-click-ai-spark"
version = "3.0.2"
description = "One command to generate a production-ready AI/ML backend — LLM, RAG, Voice, Vision, Emotion, Agents, ML Training, Computer Vision, Edge AI & more"
readme = "README.md"
authors = [
    { name = "Mohammad Asif Khan", email = "asifkhantonay@gmail.com" }
]
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = [
    "ai", "ml", "cli", "generator", "fastapi", "rag", "llm",
    "voice", "vision", "emotion", "openai", "anthropic", "ollama",
    "multimodal", "production-ready", "scaffolding", "pytorch",
    "tensorflow", "scikit-learn", "computer-vision", "mlops",
    "edge-ai", "fine-tuning", "training", "xgboost", "agents"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Typing :: Typed",
]
dependencies = [
    "jinja2>=3.1.6",
    "rich>=14.0.0",
    "typer>=0.15.0",
    "pyyaml>=6.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/one_click_ai"]

[tool.hatch.build.targets.sdist]
include = [
    "src/one_click_ai/**",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[dependency-groups]
dev = [
    "twine>=6.2.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
ocd-ai = "one_click_ai.cli:app"

[project.urls]
Homepage = "https://github.com/aktonay/one-click-ai"
Documentation = "https://github.com/aktonay/one-click-ai#readme"
Repository = "https://github.com/aktonay/one-click-ai"
Issues = "https://github.com/aktonay/one-click-ai/issues"
